# icu-sl4

./: .gitignore  Cargo.toml  GITHUB_APP_PRIVATE_KEY.md  GITHUB_APP_SETUP.md  LICENSE  Makefile  PLANO_CI.md  QUICK_PUSH.md  README.md  SLSA_BEST_PRACTICES.md  SLSA_PROVENANCE.md
.github/: ENRICH_REPOSITORY.md  FINGERPRINT.md  REPOSITORY.md  SSH_SETUP.md
.github/workflows/: ci.yaml  release.yaml
crates/icu_sl4_cli/: Cargo.toml
crates/icu_sl4_cli/src/: main.rs
crates/icu_sl4_engine/: Cargo.toml
crates/icu_sl4_engine/src/: lib.rs
crates/icu_sl4_http/: Cargo.toml
crates/icu_sl4_http/src/: main.rs
crates/icu_sl4_pdf/: Cargo.toml
crates/icu_sl4_pdf/src/: main.rs
deploy/: icu_sl4_http.service
docker/: Dockerfile.cli  Dockerfile.http
examples/: input.json  keypair.json  policy_hypoxemia.yaml
helm/icu-sl4-http/: Chart.yaml  FIREWALL.md  README.md  values.yaml
helm/icu-sl4-http/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
k8s/: deployment.yaml  networkpolicy.yaml
scripts/: ci_hash.sh  enrich_repository.sh  generate_github_app_token.sh  generate_slsa_provenance.sh  github_app_auth.sh  push_to_github.sh  push_with_github_app.sh  push_with_github_cli.sh  push_with_token.sh  repro_build.sh  setup_github_ssh.sh  setup_private_key.sh  verify_slsa_provenance.sh
