[package]
name = "icu_sl4_cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "macros"] }
hex = "0.4"
icu_sl4_engine = { path = "../icu_sl4_engine" }
rand = "0.8"
ed25519-dalek = "2.1"
