[package]
name = "icu_sl4_engine"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
regex = "1.10"
time = { version = "0.3", features = ["formatting", "macros"] }
once_cell = "1.19"
thiserror = "1.0"
anyhow = "1"
