[package]
name = "icu_sl4_http"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
icu_sl4_engine = { path = "../icu_sl4_engine" }
time = { version = "0.3", features = ["formatting", "macros"] }
hex = "0.4"
ed25519-dalek = "2.1"
utoipa = { version = "4", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
