[package]
name = "icu_sl4_pdf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
genpdf = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icu_sl4_engine = { path = "../icu_sl4_engine" }
blake3 = "1.5"
hex = "0.4"
time = { version = "0.3", features = ["formatting", "macros"] }
ed25519-dalek = "2.1"
